--- a/app/src/main/res/layout/list_item_go_junction.xml
+++ b/app/src/main/res/layout/list_item_go_junction.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:columnCount="4"
+        android:columnCount="3"
         android:rowCount="3"
         android:id="@+id/gridLayout">
 
@@ -21,7 +21,8 @@
             android:text="R256"
             android:id="@+id/text_view_nw"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,7 +32,8 @@
             android:text="R256"
             android:id="@+id/text_view_n"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,17 +43,8 @@
             android:text="R256"
             android:id="@+id/text_view_ne"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0.5"
-            android:layout_gravity="fill_horizontal|left|center_vertical"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="name"
-            android:id="@+id/name"
-            android:textSize="@dimen/abc_text_size_display_1_material"/>
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,11 +54,12 @@
             android:text="R256"
             android:id="@+id/text_view_w"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <net.nqlab.simple.view.GoDirectionView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
             android:layout_columnWeight="1"
             android:layout_gravity="center_vertical|center_horizontal"
             android:id="@+id/direction"
@@ -79,18 +73,8 @@
             android:text="R256"
             android:id="@+id/text_view_e"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="0.5"
-            android:layout_gravity="left"
-            android:layout_rowSpan="2"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="comment"
-            android:id="@+id/comment"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -100,7 +84,8 @@
             android:text="R256"
             android:id="@+id/text_view_sw"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -110,7 +95,8 @@
             android:text="R256"
             android:id="@+id/text_view_s"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -120,7 +106,8 @@
             android:text="R256"
             android:id="@+id/text_view_se"
             android:textIsSelectable="false"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_headline_material"
+            android:textColor="@color/colorTextPrimary" />
 
     </GridLayout>
 
@@ -142,10 +129,35 @@
             android:layout_height="wrap_content"
             android:layout_columnWeight="0.5"
             android:layout_gravity="fill_horizontal|left|center_vertical"
+            android:layout_columnSpan="2"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="name"
+            android:id="@+id/name"
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="0.5"
+            android:layout_gravity="center_vertical"
+            android:layout_columnSpan="2"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="comment"
+            android:id="@+id/comment"
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="0.5"
+            android:layout_gravity="fill_horizontal|left|center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0km"
             android:id="@+id/distance_addition"
-            android:textSize="@dimen/abc_text_size_display_1_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -155,7 +167,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0m"
             android:id="@+id/elevation"
-            android:textSize="@dimen/abc_text_size_display_1_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -165,7 +178,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15km/h"
             android:id="@+id/target_speed"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -175,7 +189,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15km/h"
             android:id="@+id/limit_speed"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -185,7 +200,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="+00:00"
             android:id="@+id/target_time_addition"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -195,7 +211,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="+00:00"
             android:id="@+id/limit_time_addition"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -205,7 +222,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="15km"
             android:id="@+id/pc_total_distance"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -215,7 +233,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="00:00"
             android:id="@+id/total_limit_time"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
     </GridLayout>
 
 </RelativeLayout>
