--- a/app/src/main/res/layout/list_item_go_pass.xml
+++ b/app/src/main/res/layout/list_item_go_pass.xml
@@ -11,84 +11,99 @@
         android:layout_alignEnd="@+id/gridLayout"
         android:layout_alignLeft="@+id/gridLayout"
         android:layout_marginTop="0dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:columnCount="3"
-        android:rowCount="2"
+        android:columnCount="2"
+        android:rowCount="3"
         android:useDefaultMargins="true">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|left"
+            android:layout_columnSpan="2"
+            android:layout_columnWeight="2"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="name"
             android:id="@+id/name"
-            android:textSize="@dimen/abc_text_size_headline_material"/>
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|left"
             android:layout_columnSpan="2"
+            android:layout_columnWeight="2"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="comment"
             android:id="@+id/comment"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|left"
+            android:layout_gravity="left|center_vertical"
+            android:layout_columnWeight="1"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0km"
             android:id="@+id/distance_addition"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|left"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="15km/h"
-            android:id="@+id/target_speed"
-            android:textSize="@dimen/abc_text_size_headline_material" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|left"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="15km/h"
-            android:id="@+id/limit_speed"
-            android:textSize="@dimen/abc_text_size_headline_material" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|left"
+            android:layout_columnWeight="1"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0m"
             android:id="@+id/elevation"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:layout_columnWeight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="15km/h"
+            android:id="@+id/target_speed"
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|left"
+            android:layout_columnWeight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="15km/h"
+            android:id="@+id/limit_speed"
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|left"
+            android:layout_columnWeight="1"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="+00:00"
             android:id="@+id/target_time_addition"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|left"
+            android:layout_columnWeight="1"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="+00:00"
             android:id="@+id/limit_time_addition"
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:textSize="@dimen/abc_text_size_display_2_material"
+            android:textColor="@color/colorTextPrimary" />
 
     </GridLayout>
 
