--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
     tools:context="net.nqlab.btmw.wear.MainActivity"
     tools:deviceIds="wear">
 
+    <ImageView
+        android:src="@mipmap/ic_nav_start"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
